<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="#4a88c1"
               android:paddingLeft="@dimen/acl_item_margin_space_left"
               android:paddingRight="@dimen/acl_item_margin_space_right"
               android:paddingBottom="10dp">
               
    <TextView   android:id="@+id/acl_reset_pwd_prompt_tv"
                style="@style/acl_tv_prompt_style"
                android:layout_marginTop="10dp"
                android:textColor="@color/acl_white"
                android:text="@string/acl_reset_pwd_hint" />
    
    <LinearLayout android:id="@+id/acl_reset_pwd_input_tv"
            style="@style/acl_input_layout_new"
            android:layout_marginTop="@dimen/acl_item_space_small_height"
            android:layout_below="@id/acl_reset_pwd_prompt_tv">            
            <com.borqs.account.login.ui.EmailTextView
                android:id="@+id/acl_rpd_user_id_tv"
                style="@style/acl_input_tv_style"               
                android:hint="@string/acl_rpd_user_id_input_hint"
                android:imeOptions="actionDone">
                <requestFocus/>
            </com.borqs.account.login.ui.EmailTextView>
    </LinearLayout>
        
    <Button
          android:id="@+id/acl_get_pwd_btn"
          android:layout_below="@id/acl_reset_pwd_input_tv"
          style="@style/acl_button_style_new"
           android:layout_marginTop="@dimen/acl_item_space_height"           
          android:text="@string/acl_get_new_pwd" />
    
</RelativeLayout>